--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -17,3 +17,10 @@ html {
 body {
   font-family: system-ui, sans-serif;
 }
+
+input,
+button,
+select {
+  font-size: inherit;
+  font-family: inherit;
+}
